[package]
name = "rand-split"
version = "0.1.0"
authors = ["Luis Casillas <luis@casillas.org>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Splittable random number generators."
keywords = ["random", "rng"]

[dependencies]
rand = "0.3"

[dev-dependencies]
mersenne_twister = "0.3.0"
