[package]
name = "rand-split"
version = "0.1.1"
authors = ["Luis Casillas <luis@casillas.org>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/sacundim/rust-rand-split"
documentation = "http://sacundim.github.io/rust-rand-split/rand_split/index.html"
homepage = "https://github.com/sacundim/rust-rand-split"
description = "Splittable random number generators."
keywords = ["random", "rng"]

[dependencies]
rand = "0.3"

[dev-dependencies]
mersenne_twister = "0.3.0"
